added CRUD for comments

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,3 +9,8 @@
                     turbo_confirm: "Are you sure?"
                   } %></li>
 </ul>
+<br>
+
+<%= link_to "View All Comments", article_comments_path(@article) %>
+
+<h2><%= link_to "Home", articles_path %></h2>
